--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/vladiuskor/nodejs-api-udemy-lar#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tslog": "^4.7.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.15"
